# qutim

./: .gitignore  CMakeLists.txt  qutim.qbp
core/: CMakeLists.txt
core/cmake/: QutIMMacros.cmake
core/lib/: CMakeLists.txt  libqutim.qbs
core/libqutim/: actiontoolbar.cpp  libqutim.qbs  modulemanager.cpp
plugins/: CMakeLists.txt  QutimPlugin.qbs  plugintemplate.cpp
plugins/adiumwebview/: adiumwebview.qbs
plugins/aescrypto/: CMakeLists.txt  aescrypto.qbs
plugins/aescrypto/src/: aescryptomodule.cpp
plugins/antiboss/: antiboss.qbs
plugins/antispam/: antispam.qbs
plugins/aspeller/: CMakeLists.txt
plugins/awn/: awn.qbs
plugins/birthdayreminder/: birthdayreminder.qbs
plugins/clconf/: clconf.qbs
plugins/dbusapi/: dbusapi.qbs
plugins/dbusnotifications/: CMakeLists.txt  dbusnotifications.qbs  org.freedesktop.Notifications.xml
plugins/emoedit/: emoedit.qbs
plugins/floaties/: floaties.qbs
plugins/histman/: histman.qbs
plugins/hunspeller/: CMakeLists.txt
plugins/indicator/: CMakeLists.txt  indicator.qbs
plugins/kdeintegration/: kdeintegration.qbs
plugins/logger/: logger.qbs
plugins/massmessaging/: massmessaging.qbs
plugins/nowplaying/: CMakeLists.txt  nowplaying.qbs
plugins/oldcontactdelegate/: oldcontactdelegate.qbs
plugins/phononsound/: phononsound.qbs
plugins/plugman/: plugman.qbs
plugins/qmlchat/: qmlchat.qbs
plugins/qrcicons/: qrcicons.qbs
plugins/scriptapi/: scriptapi.qbs
plugins/sdlsound/: sdlsound.qbs
plugins/unitylauncher/: unitylauncher.qbs
plugins/urlpreview/: urlpreview.qbs
protocols/: CMakeLists.txt
(+167 files in other folders)
